config and directories

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,16 +3,16 @@ server {
 
     server_name localhost;
 
-    location /static/ {
-        root /var/www/testify;
+    location /uploads/ {
+        root /home/box/web;
     }
 
-    location /media/ {
-        root /var/www/testify;
+    location ~* ^.+/./w+$ {
+        root /home/box/web/public/;
     }
-
     location / {
-        proxy_set_header Host $host;
-        proxy_pass http://backend:8050;
+        return 404;
     }
+
+
 }
