--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -7,8 +7,8 @@ server {
         root /home/box/web;
     }
 
-    location ~* ^.+/./w+$ {
-        root /home/box/web/public/;
+    location ~* .+\.\w+$ {
+        root /home/box/web/public;
     }
     location / {
         return 404;
