--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,8 +3,8 @@ server {
 
     server_name localhost;
 
-    location /uploads/ {
-        root /home/box/web;
+    location ^~ /uploads/ {
+        root /home/box/web/;
     }
 
     location ~* .+\.\w+$ {
