--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,6 +3,10 @@ server {
 
     server_name localhost;
 
+    location /hello/ {
+        proxy_set_header Host $host;
+        proxy_pass http://0:8080;
+    }
     location ^~ /uploads/ {
         root /home/box/web/;
     }
