--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -7,6 +7,10 @@ server {
         proxy_set_header Host $host;
         proxy_pass http://0:8080;
     }
+    location / {
+        proxy_set_header Host $host;
+        proxy_pass http://0:8000;
+    }
     location ^~ /uploads/ {
         root /home/box/web/;
     }
@@ -14,9 +18,7 @@ server {
     location ~* .+\.\w+$ {
         root /home/box/web/public;
     }
-    location / {
-        return 404;
-    }
+
 
 
 }
